layout issue fixed

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -20,7 +20,7 @@
     width: 80%;
     line-height: 45px;
     border-radius: 2ch;
-    background-color: rgba(184, 207, 236, 0.473);
+    background-color:#f5e2e2;
     box-shadow: rgba(99, 9, 9, 0.25) 0px 25px 50px -12px;
 }
 
@@ -30,12 +30,13 @@
     font-style: normal;
     font-weight: 400;
     text-align: left;
-    color: #818181;
+    color: rgb(68, 119, 123);
+    text-shadow: 0px 3px 0px rgba(239, 154, 159);
     line-height: 45px;
     left: 4ch;
     width: 90%;
     position: relative;
-    text-shadow: 0px 4px 4px rgba(238, 146, 200, 0.25);
+   
 }
 
 .portfolios-container__portfolio-title h1 {
@@ -43,6 +44,7 @@
     width: 100%;
     text-align: center;
     position: relative;
+   border-bottom: 2px solid rgb(107, 108, 109)
 }
 
 .portfolios-container_portfolio-text p {
@@ -55,57 +57,57 @@
 }
 
 .homeNav_container {
-    position: fixed;
-    left: 0ch;
-    top: 0ch;
-    height: 100%;
-    width: 340px;
-    margin: none;
-    padding: 10px;
-    z-index: 2;
-    background: rgb(185, 210, 211);
-    display: block;
-    flex-direction: column;
-    box-shadow: rgba(99, 9, 9, 0.25) 0px 25px 50px -12px;
+        padding: 10px;
+        padding-top: 40px;
+    
+        background: rgb(253, 222, 137);
+        border-bottom: 2px solid #818181;
+    
+    
 }
 
 .londa_home {
 
+    top: 0px;
+    display: block;
     position: relative;
+    font-family: 'Coiny', cursive;
     font-style: normal;
     font-weight: 400;
-    text-align: left;
-    font-size: 66px;
-    line-height: 45px;
-    color: #818181;
-    padding-top: 0ch;
-    top: 0ch;
-    left: 2ch;
+    font-size: 85px;
+    line-height: 80px;
+    color: rgb(239, 154, 159);
+    text-shadow: 0px 10px 0px rgba(68, 119, 123);
+    letter-spacing: 6px;
+    padding: 10px;
 }
 
 .project-home {
     display: block;
-    padding: 30px 40px 30px 30px;
     text-decoration: none;
-    font-size: 30px;
     font-family: 'Coiny', cursive;
-    color: #818181;
+    font-size: 30px;
+    color: rgb(68, 119, 123);
+    text-shadow: 0px 3px 0px rgba(239, 154, 159);
     display: block;
     transition: 0.3s;
-    text-align: center;
+    text-align: left;
     border: none;
-    margin: 25%;
+    margin: 0%;
     background: rgba(231, 222, 203, 0);
-    border-bottom: 2px solid #818181;
-    text-shadow: 0px 4px 4px rgba(187, 75, 99, 0.308);
 }
 
 .project-home:hover {
-    color: rgba(44, 107, 111, 0.58);
-    border-bottom: 2px solid rgba(44, 107, 111, 0.58);
-    font-size: 32px;
+    color: rgba(239, 154, 159);
+    text-shadow: 0px 3px 0px rgb(68, 119, 123);
 }
 
+
+
+.circle-links-p{
+    justify-content: flex-end;
+    align-items: left;
+}
 
 
 /* width */
@@ -133,26 +135,26 @@
 
 .btn_github_prg {
     position: relative;
-    display: inline;
-    text-align: center;
+    text-align: left;
     padding: 1ch;
-    left: 20%;
     background-color: rgba(228, 228, 228, 0);
     text-decoration: none;
     font-size: 27px;
-    color: #818181;
+    color: rgb(68, 119, 123);
+    text-shadow: 0px 3px 0px rgba(239, 154, 159);
     border-radius: 2ch;
     background-color: rgba(184, 207, 236, 0);
-    text-decoration: underline;
-    text-shadow: 0px 4px 4px rgba(202, 52, 52, 0.25);
+
+
 
 }
 
 .btn_github_prg:hover {
-    color: rgba(58, 129, 134, 0.596);
-    text-shadow: 0px 4px 4px rgba(38, 63, 63, 0.151);
+    color: rgba(239, 154, 159);
+    text-shadow: 0px 3px 0px rgb(68, 119, 123);
 
 }
+
 
 
 @media screen and (max-width: 890px) {
